# stash

./: .gitignore  ANIMATIONS_DEMO.md  Cargo.toml  README.md  youtube_downloader.py  ytdownload.sh
.claude/: settings.local.json
.claude/commands/: implement.md  prime.md
.opencode/agent/: openagent.md  opencoder.md
.opencode/agent/development/: backend-specialist.md  codebase-agent.md
specs/: phase-01-foundation.md  phase-04-polish-ux.md  phase-05-distribution.md  rust-tui-implementation.md  welcome-screen-redesign.md
specs/done/: REFACTORING.md  phase-01-foundation.md  phase-02-beautiful-tui.md  phase-03-advanced-features.md  phase-04-polish-ux.md
src/: batch.rs  cli.rs  clipboard.rs  config.rs  downloader.rs  error.rs  history.rs  lib.rs  main.rs  playlist.rs  tui.rs  utils.rs
src/cli/: config.rs  mod.rs  parser.rs
src/cli/commands/: config.rs  download.rs  history.rs  info.rs  playlist.rs
src/commands/: config.rs  download.rs  history.rs  info.rs  mod.rs  playlist.rs
src/core/: batch.rs  history.rs  mod.rs  playlist.rs
src/infra/: clipboard.rs  downloader.rs  logger.rs  mod.rs  notifications.rs
src/shared/: constants.rs  mod.rs  utils.rs
src/tui/: app.rs  mod.rs  runner.rs  terminal.rs  theme.rs
src/tui/screens/: downloading.rs  error.rs  fetching.rs  format_selection.rs  help.rs  mod.rs  settings.rs  success.rs  url_input.rs  welcome.rs
src/tui/widgets/: banner.rs  color_cycle.rs  mod.rs  progress_bar.rs  spinner.rs
src/ui/: app.rs  events.rs  mod.rs  terminal.rs
tests/: cli_tests.rs  spinner_test.rs  utils_tests.rs
(+19 files in other folders)
