[package]
name = "ytdl"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A comprehensive YouTube downloader CLI with logging and observability"
license = "MIT"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "string"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = "0.2"
tracing-log = "0.2"

# Progress bars
indicatif = { version = "0.17", features = ["tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Path utilities
directories = "5.0"

# Terminal utilities
colored = "2.1"
crossterm = "0.28"
ratatui = "0.28"

# URL parsing and validation
url = "2.5"

# Regex for parsing yt-dlp output
regex = "1.10"

# Date/time utilities
chrono = { version = "0.4", features = ["serde"] }

# Clipboard integration
arboard = "3.4"

# Async utilities for concurrent downloads
futures = "0.3"

# Desktop notifications (macOS, Linux, Windows)
notify-rust = "4.11"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.12"
